public_html/static/css/style.css
/* ... */
.sprite-travel{
	width: 140px;
	height: 140px;
	background-position: -700px 0;
	margin: 0 auto;
	transition: 0.3s;
}
.sprite-travel:hover{
	background-position: -700px -140px;
}
.sprite-deputy{
	width: 140px;
	height: 140px;
	background-position: -280px 0;
	margin: 0 auto;
	transition: 0.3s;
}
.sprite-deputy:hover{
	background-position: -280px -140px;
}
.sprite-lottory{
	width: 140px;
	height: 140px;
	background-position: 0 0;
	margin: 0 auto;
	transition: 0.3s;
}
.sprite-lottory:hover{
	background-position: 0 -140px;
}

.sprite-farahzad{
	width: 140px;
	height: 140px;
	background-position: -840px 0;
	margin: 0 auto;
}
.sprite-farahzad:hover{
	background-position: -840px -140px;
}
.sprite-sahargahan{
	width: 140px;
	height: 140px;
	background-position: -980px 0;
	margin: 0 auto;
	transition: 0.3s;
}
.sprite-sahargahan:hover{
	background-position: -980px -140px;
}
.sprite-samtekhoda{
	width: 140px;
	height: 140px;
	background-position: -1120px 0;
	margin: 0 auto;
	transition: 0.3s;
}
.sprite-samtekhoda:hover{
	background-position: -1120px -140px;
}
.sprite-mylovestory{
	width: 140px;
	height: 140px;
	background-position: -1260px 0;
	margin: 0 auto;
	transition: 0.3s;
}
.sprite-mylovestory:hover{
	background-position: -1260px -140px;
}
.sprite-imani{
	width: 140px;
	height: 210px;
	background-position: -800px -300px;
	margin: 0 auto;
}
.sprite-imani:hover{
	background-position: -650px -300px;
}
.sprite-adminContact{
	width: 140px;
	height: 140px;
	background-position: -140px 0;
	margin: 0 auto;
}
.sprite-adminContact:hover{
	background-position: -140px -140px;
}
/* social links*/
.sprite-sapp{
	background-position: 0 -300px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-eitaa{
	background-position: -32px -300px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-aparat{
	background-position: -96px -300px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-telegram{
	background-position: -160px -300px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-whatsapp{
	background-position: -192px -300px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-instagram{
	background-position: -288px -300px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-twitter{
	background-position: -320px -140px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-facebook{
	background-position: -352px -140px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}
.sprite-youtube{
	background-position: -384px -140px;
	width: 32px;
	height: 32px;
	margin: 0 auto;
}

/* picto styles*/
.picto{
	margin-top: 1em;
	text-align: center;
}
.picto a{
	display: block;
	margin-bottom: 2em;
}
.picto h2{
	margin-top: 1em;
}

.billingInfo{
	font-size: 1.5em;
	margin-top: 5em;
	text-align: center;
}
.billingInfo h2{
}
.t733{
	letter-spacing: 3px;
}
.billingInfo .msg{
	min-height: 125px;
	height: 125px;
	padding:14px 1.5em;
}
.billingInfo .msg.bank{
	font-size: 0.9em;
	line-height: 30px;
}
.billingInfo .msg.bank .spay-64-resalat{
	margin: 0 auto;
}
.billingInfo .msg.donateLink .btn{
	height:95px;
	line-height:83px;
}
.latestNews{
	margin-top: 7em;
}


/* footer*/
#sFooter{
	font-size: 1.3em;
	background-color: #e4e4e4;
	padding-top: 120px;
	position: relative;
	background-image: url('../images/homepage-v3/footer-pattern.png');
	background-repeat: repeat-x;
	background-position: bottom;
	color: #333;
	animation: animatedBackground 60s linear infinite;
	-webkit-animation: animatedBackground 60s linear infinite;
}
@keyframes animatedBackground {
	from { background-position: 0 bottom; }
	to { background-position: 100% bottom; }
}
@-webkit-keyframes animatedBackground {
	from { background-position: 0 bottom; }
	to { background-position: 100% bottom; }
}
#sFooter .cn{
	overflow:hidden;
}
#sFooter .brand{
	width: 140px;
	height: 140px;
	padding: 10px;
	position: absolute;
	right: 0;
	left: 0;
	top: -70px;
	margin:0 auto;
	background-color: #f5f5f5;
	border-radius: 50%;
	transition: 0.3s;
	user-select: none;
	border: 1px solid transparent;
}
#sFooter:hover .brand{
	border-color: #fff;
}
#sFooter .brand:hover{
	background-color: #fff;
}
#sFooter .brand:before{
	content: "";
	height:88px;
	width: 184px;
	position: absolute;
	right: -22px;
	top: 70px;
	margin:0 auto;
	background-image: url('../images/homepage-v3/sprite.png');
	background-position: -450px -300px;
}
#sFooter .brand h2{
	display: none;
}
#sFooter h3{
	font-size: 1.4em;
	color: #777;
}
#sFooter nav{
	margin-bottom:1em;
}
#sFooter nav a{
	display: block;
	transition:0.3s;
	padding:5px 0.5em;
	line-height: 20px;
}
#sFooter nav a:hover{
	background-color: rgba(0,0,0,0.05);
}
#sFooter nav a:focus{
	background-color: rgba(0,0,0,0.1);
}
/* share links*/
.shareC{
	user-select: none;
	margin: 1em auto 2em;
}
.shareC a{
	position:relative;
	display:inline-block!important;
	overflow:hidden;
	margin:2px;
	width:32px;
	height:32px;
	padding: 0!important;
	font-size:0!important;
	line-height:0!important;
	border-radius:1px;
	background-color:rgba(0,0,0,0.02);
}
#sFooter hr{
	border-color: #aa6523;
	position: relative;
	margin:50px auto 70px;
	max-width: 100%;
}
#sFooter hr:before{
	content: "";
	height:60px;
	width: 580px;
	max-width: 100%;
	position: absolute;
	right: 0;
	left: 0;
	top: -30px;
	margin:0 auto;
	background-image: url('../images/homepage-v3/sprite.png');
	background-color: #e4e4e4;
	background-position: 0 -420px;
}
#sFooter #copyright{
	border-top: 1px solid #aa6523;
	padding: 1em 0;
	user-select: none;
}
#sFooter #copyright a{
	padding:5px 0;
	transition:0.3s;
	line-height: 25px;
	border-bottom:1px dashed transparent;
	display: inline-block;
}
#sFooter #copyright a:hover{border-bottom:1px dashed #aaa}
#sFooter #copyright a:focus{background-color: rgba(0,0,0,0.1);}


.msg.simple{
	border-color: #aa6523;
	background-color: #eee;
}
.msg.simple:hover{
	border-color: #5a2f06;
}

.pageData{
	font-size: 1.4em;
	color: #777;
}
.pageTitle{
	text-align: center;
	padding-top: 2em;
}
.pageTitle .sB3{
	font-size: 1em;
}
/* ... */

